[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-hardware-test"
version = "0.2.0"
description = "Single-qubit characterization bench (T1/T2*/Rabi/readout fidelity) with cryostat thermal-control support"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Eric Rosenfeld" },
]
keywords = ["qubit", "characterization", "T1", "T2", "rabi", "readout-fidelity", "cryostat"]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.8.0",
    "pandas>=1.4.0",
    "matplotlib>=3.5.0",
    "reportlab>=3.6.0",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
# Optional Lindblad master-equation engine. The closed-form simulators + fits
# (and the full test suite) work WITHOUT this.
quantum-dynamics = ["qutip>=4.7"]
dev = ["pytest>=7.0.0", "pytest-cov"]

[project.scripts]
# Headline tool: run the single-qubit characterization battery on the
# built-in simulators and print fitted values with uncertainties.
qubit-characterize = "qht.qubit.__main__:main"
# Supporting cryostat thermal-control simulation.
cryostat-control = "qht.cryocooler.cryocooler:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["qht*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
